# lead_hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config_example.yaml  docker-compose.yaml  main.py  pyproject.toml  run_tests.ps1
application/: pipeline.py  tracker.py  work_email.py  worker_telegram.py
core/: config.py  interfaces.py  logger.py
domain/: heuristics.py  models.py  signatures.py  validators.py
infrastructure/: browser_playwright.py  compute_gcp.py  database.py  email_smtp.py  llm_dspy.py  migrations.py  search_ddg.py  telegram_svc.py  visualizer_pyvis.py
scripts/: optimize_agent.py
tests/: test_advanced.py  test_application.py  test_auxiliary.py  test_config.py  test_domain.py  test_email_delivery.py  test_full_pipeline_mock.py  test_fuzzing.py  test_gcp_compute.py  test_heuristics.py  test_infrastructure.py  test_lead_validation.py  test_queue_concurrency.py  test_resilience.py  test_settings_pydantic.py  test_system_invariants.py
workspaces/cv_outreach/: email_template.txt  prompts.yaml
