# pyproject.toml

# 1. Build System Configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 2. Project Metadata
[project]
name = "lead-hunter-daemon"
version = "1.0.0"
description = "Autonomous B2B Intelligence & Outreach Framework powered by DSPy"
readme = "README.md"
authors = [
  { name = "Jack Gell", email = "jacktgell@gmail.com" },
]
# FIX 1: Updated License format to simple string (SPDX identifier)
license = "MIT"
requires-python = ">=3.13"
keywords = ["ai", "agent", "dspy", "lead-generation", "automation"]

# 3. Core Dependencies
dependencies = [
    "camoufox==0.4.11",
    "colorama>=0.4.6",
    "ddgs>=9.10.0",
    "dspy==3.1.3",
    "google-cloud-compute==1.43.0",
    "google-cloud-logging==3.13.0",
    "langdetect==1.0.9",
    "playwright==1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv==1.2.1",
    "pyvis==0.3.2",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "singleton-decorator==1.0.0",
    "sqlmodel==0.0.37",
    "sqlalchemy>=2.0.46",
    "duckduckgo_search==8.1.1",
]

# 4. Development Dependencies
[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "black",
    "ruff",
]

# FIX 2: Explicit Package Discovery for Flat Layouts
# This tells setuptools exactly which folders are Python packages
[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "core*", "domain*", "infrastructure*"]
exclude = ["workspaces*", "tests*", "scripts*", "lib*"]

# 5. Tool Configurations
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --color=yes"
testpaths = ["tests"]
pythonpath = "."
python_files = "test_*.py"

[tool.coverage.run]
source = ["application", "infrastructure", "core", "domain"]
omit = ["tests/*", ".venv/*"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]